--- a/app/sass/navbar.scss
+++ b/app/sass/navbar.scss
@@ -22,7 +22,7 @@
     }
     a{
       font-family: 'Roboto', sans-serif;
-      font-size: 18px;
+      font-size: 15px;
       color: $dark-2;
       cursor: pointer;
       text-decoration: none !important;
